--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -5,12 +5,15 @@
   "author": "Raymond Rutjes <raymond.rutjes@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "yarn run build:server && yarn run build:client",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
     "express": "^4.15.3",
     "vue": "^2.3.3",
+    "vue-instantsearch": "^0.0.0",
+    "vue-router": "^2.5.3",
     "vue-server-renderer": "^2.3.3"
   },
   "devDependencies": {
@@ -22,10 +25,13 @@
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
+    "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-ssr-webpack-plugin": "^3.0.0",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
