--- a/examples/e-commerce/package.json
+++ b/examples/e-commerce/package.json
@@ -9,8 +9,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "algoliasearch-helper": "^2.20.1",
     "vue": "^2.2.2",
-    "vue-instantsearch": "*"
+    "vue-instantsearch": "*",
+    "vue-router": "^2.5.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -32,22 +34,22 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
+    "node-sass": "^4.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.0",
+    "semver": "^5.3.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1",
-    "node-sass": "^4.5.0",
-    "sass-loader": "^6.0.0"
+    "webpack-merge": "^2.6.1"
   },
   "engines": {
     "node": ">= 4.0.0",
