--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -13,7 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc3"
+    "nuxt": "^1.0.0-rc3",
+    "vue-instantsearch": "^0.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
