--- a/examples/multi-index/package.json
+++ b/examples/multi-index/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "vue": "^2.2.1",
-    "vue-instantsearch": "*"
+    "vue-instantsearch": "^0.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
