--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "nuxt": "^1.0.0-rc3",
-    "vue-instantsearch": "^0.7.0"
+    "vue-instantsearch": "^1.3.4"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.1",
     "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
