--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -1,30 +1,16 @@
 {
-  "name": "nuxt-instantsearch",
+  "name": "nuxt-instansearch",
   "version": "1.0.0",
-  "description": "Nuxt.js integration with Vue InstantSearch",
-  "author": "Raymond Rutjes <raymond.rutjes@gmail.com>",
-  "private": true,
+  "description": "Nuxt integration with Vue InstantSearch",
+  "license": "MIT",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc3",
+    "nuxt": "^1.3.0",
     "vue-instantsearch": "^1.3.4"
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
   }
 }
