--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -1,13 +1,16 @@
 {
   "name": "example-ssr",
-  "description": "An illustration of server side rendering with Algolia Vue InstantSearch.",
+  "description":
+    "An illustration of server side rendering with Algolia Vue InstantSearch.",
   "version": "1.0.0",
   "author": "Raymond Rutjes <raymond.rutjes@gmail.com>",
   "private": true,
   "scripts": {
     "build": "yarn run build:server && yarn run build:client",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:client":
+      "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server":
+      "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
     "express": "^4.15.3",
