chore: latest Vue InstantSearch (works, I tested it)

--- a/examples/vue-router/package.json
+++ b/examples/vue-router/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "qs": "^6.5.0",
     "vue": "^2.2.1",
-    "vue-instantsearch": "*",
+    "vue-instantsearch": "1.4.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
