--- a/examples/e-commerce/package.json
+++ b/examples/e-commerce/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
-    "vue-instantsearch": "^1.3.4"
+    "vue-instantsearch": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
@@ -53,5 +53,9 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
