--- a/examples/quick-start/package.json
+++ b/examples/quick-start/package.json
@@ -1,7 +1,6 @@
 {
   "name": "example-simple",
-  "description":
-    "Simple example of using Algolia instantsearch with Vue.js in the browser.",
+  "description": "Simple example of using Algolia instantsearch with Vue.js in the browser.",
   "version": "0.0.0",
   "author": "Raymond Rutjes <raymond.rutjes@gmail.com>",
   "private": true,
@@ -9,6 +8,6 @@
     "build": "[[ -f 'index.html' ]] && echo 'all good'"
   },
   "dependencies": {
-    "vue-instantsearch": "1.3.4"
+    "vue-instantsearch": "1.4.0"
   }
 }
