--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -1,21 +1,18 @@
 {
   "name": "example-ssr",
-  "description":
-    "An illustration of server side rendering with Algolia Vue InstantSearch.",
+  "description": "An illustration of server side rendering with Algolia Vue InstantSearch.",
   "version": "1.0.0",
   "author": "Raymond Rutjes <raymond.rutjes@gmail.com>",
   "private": true,
   "scripts": {
     "build": "yarn run build:server && yarn run build:client",
-    "build:client":
-      "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server":
-      "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
     "express": "^4.15.3",
     "vue": "^2.3.3",
-    "vue-instantsearch": "^1.3.4",
+    "vue-instantsearch": "^1.4.0",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.3.3"
   },
